--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 <link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.6/css/jquery.dataTables.css">
 <link rel="stylesheet" type="text/css" href="//cdn.datatables.net/responsive/1.0.5/css/dataTables.responsive.css">
 
+
+
 <!--my stylesheet-->
 <link href="css/styles.css" rel="stylesheet" type="text/css" />
 
@@ -118,7 +120,7 @@
           <a href="#A"><input class="picwid switch foxx-pic" type="button" name="g"  value="foxx"></input></a><p class="leg-list-title"><br>Virginia Foxx</p><p class="thumb-district">District 5</p>
         </div>
         <div class="leg-list-col col-lg-3 col-md-3 col-sm-3 col-xs-6">
-          <a href="#A"><input class="picwid switch walker-pic" type="button" name="g"  value="walker"></input></a><p class="leg-list-title"><br>Bradley Walker</p><p class="thumb-district">District 6</p>
+          <a><input class="picwid switch walker-pic" type="button" name="g"  value="walker"></input></a><p class="leg-list-title"><br>Bradley Walker</p><p class="thumb-district">District 6</p>
         </div>
         <div class="leg-list-col col-lg-3 col-md-3 col-sm-3 col-xs-6">
           <a href="#A"><input class="picwid switch rouzer-pic" type="button" name="g"  value="rouzer"></input></a><p class="leg-list-title"><br>David Rouzer</p><p class="thumb-district">District 7</p>
@@ -149,49 +151,32 @@
         </div>
       </div><!--end inner row-->
     </div><!--end col-->
+
   </div><!--end row-->
 
   <a name="A"></a>
 
+<div class="max-width col-lg-10 col-lg-offset-2 col-md-10 col-md-offset-2 col-sm-12">
+  <hr>
+</div>
 
-  <!--ROW 2-->
-  <div class="row">
-    <div id="rep-name" class="max-width col-lg-10 col-lg-offset-2 col-md-10 col-md-offset-2 col-sm-12">
-    </div><!--end col-->
-  </div><!--end row-->
 
-  <!--ROW 3-->
-
-  <div class="row">
-    <div class="max-width col-lg-10 col-lg-offset-2 col-md-10 col-md-offset-2 col-sm-12">
-
-      <div class="row">
-        <div id="descr-thumb"></div>
-        <div id="descr-district" class="col-lg-4 col-md-4 col-sm-4 col-xs-4"></div><!--end inner col-->
-        <div id="descr-party" class="col-lg-4 col-md-4 col-sm-4 col-xs-4"></div><!--end inner col-->
-      </div><!--end inner row-->
-
-      <div class="row">
-           <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
-
-          </div><!--end inner col-->
-          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
-            <p id="descr-party"></p>
-          </div><!--end inner col-->
-      </div><!--end inner row-->
-
-    </div><!--end col-->
-  </div><!--end row-->
 
   <div class="row">
   <div id="no-graph"></div>
-  <div id="main-graph" class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-  <div id="no-data" class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+  <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12" style="padding-left: 8%;padding-top: 2%;">
+    <div id="rep-name" style="font-size:30px;"></div>
+    <div id="descr-district" style="font-size:15pt;"></div><!--end inner col-->
+    <div id="descr-party" style="font-size:15pt;"></div><!--end inner col-->
+    <div id="rep-pic"></div>
+  </div>
+  <div id="main-graph" class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
+  <div id="no-data" class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
 
   </div>
 </div>
 
-<hr>
+
 
   <!--ROW 4-->
   <div class="row">
@@ -314,10 +299,12 @@
           $('#rep-name').empty();
           $('#descr-district').empty();
           $('#descr-party').empty();
+          $('#rep-pic').empty();
 
           $('#rep-name').append('<p class="rep-name">Alma Adams</p>');
           $('#descr-district').append('<p class="descr-district"><span class="subber">District: </span> 12</p>');
           $('#descr-party').append('<p class="democrat"><span class="subber">Party: </span>Democrat</p>');
+          $('#rep-pic').append('<div class="picwid adams-pic"></div>');
 
           console.log("Adams chart");
 
@@ -358,10 +345,12 @@
           $('#rep-name').empty();
           $('#descr-district').empty();
           $('#descr-party').empty();
+          $('#rep-pic').empty();
 
           $('#rep-name').append('<p class="rep-name">G.K. Butterfield</p>');
           $('#descr-district').append('<p class="descr-district"><span class="subber">District: </span> 1</p>');
           $('#descr-party').append('<p class="democrat"><span class="subber">Party: </span>Democrat</p>');
+          $('#rep-pic').append('<div class="picwid butterfield-pic"></div>');
 
           chart = new Highcharts.Chart({
             chart: {
@@ -399,10 +388,12 @@
           $('#rep-name').empty();
           $('#descr-district').empty();
           $('#descr-party').empty();
+          $('#rep-pic').empty();
 
           $('#rep-name').append('<p class="rep-name">Renee Ellmers</p>');
           $('#descr-district').append('<p class="descr-district"><span class="subber">District: </span> 2</p>');
           $('#descr-party').append('<p class="republican"><span class="subber">Party: </span>Republican</p>');
+          $('#rep-pic').append('<div class="picwid ellmers-pic"></div>');
 
           chart = new Highcharts.Chart({
             chart: {
@@ -441,10 +432,12 @@
           $('#rep-name').empty();
           $('#descr-district').empty();
           $('#descr-party').empty();
+          $('#rep-pic').empty();
 
           $('#rep-name').append('<p class="rep-name">Virginia Foxx</p>');
           $('#descr-district').append('<p class="descr-district"><span class="subber">District: </span> 5</p>');
           $('#descr-party').append('<p class="republican"><span class="subber">Party: </span>Republican</p>');
+          $('#rep-pic').append('<div class="picwid foxx-pic"></div>');
 
           chart = new Highcharts.Chart({
             chart: {
@@ -482,10 +475,12 @@
           $('#rep-name').empty();
           $('#descr-district').empty();
           $('#descr-party').empty();
+          $('#rep-pic').empty();
 
           $('#rep-name').append('<p class="rep-name">George Holding</p>');
           $('#descr-district').append('<p class="descr-district"><span class="subber">District: </span> 13</p>');
           $('#descr-party').append('<p class="republican"><span class="subber">Party: </span>Republican</p>');
+          $('#rep-pic').append('<div class="picwid holding-pic"></div>');
 
           chart = new Highcharts.Chart({
             chart: {
@@ -523,10 +518,12 @@
           $('#rep-name').empty();
           $('#descr-district').empty();
           $('#descr-party').empty();
+          $('#rep-pic').empty();
 
           $('#rep-name').append('<p class="rep-name">Richard Hudson</p>');
           $('#descr-district').append('<p class="descr-district"><span class="subber">District: </span> 8</p>');
           $('#descr-party').append('<p class="republican"><span class="subber">Party: </span>Republican</p>');
+          $('#rep-pic').append('<div class="picwid hudson-pic"></div>');
 
           chart = new Highcharts.Chart({
             chart: {
@@ -564,10 +561,12 @@
           $('#rep-name').empty();
           $('#descr-district').empty();
           $('#descr-party').empty();
+          $('#rep-pic').empty();
 
           $('#rep-name').append('<p class="rep-name">Walter Jones, Jr.</p>');
           $('#descr-district').append('<p class="descr-district"><span class="subber">District: </span> 3</p>');
           $('#descr-party').append('<p class="republican"><span class="subber">Party: </span>Republican</p>');
+          $('#rep-pic').append('<div class="picwid jones-pic"></div>');
 
           chart = new Highcharts.Chart({
             chart: {
@@ -605,10 +604,12 @@
           $('#rep-name').empty();
           $('#descr-district').empty();
           $('#descr-party').empty();
+          $('#rep-pic').empty();
 
           $('#rep-name').append('<p class="rep-name">Patrick McHenry</p>');
           $('#descr-district').append('<p class="descr-district"><span class="subber">District: </span> 10</p>');
           $('#descr-party').append('<p class="republican"><span class="subber">Party: </span>Republican</p>');
+          $('#rep-pic').append('<div class="picwid mchenry-pic"></div>');
 
           chart = new Highcharts.Chart({
             chart: {
@@ -646,10 +647,12 @@
           $('#rep-name').empty();
           $('#descr-district').empty();
           $('#descr-party').empty();
+          $('#rep-pic').empty();
 
           $('#rep-name').append('<p class="rep-name">Mark Meadows</p>');
           $('#descr-district').append('<p class="descr-district"><span class="subber">District: </span> 11</p>');
           $('#descr-party').append('<p class="republican"><span class="subber">Party: </span>Republican</p>');
+          $('#rep-pic').append('<div class="picwid meadows-pic"></div>');
 
           chart = new Highcharts.Chart({
             chart: {
@@ -687,10 +690,12 @@
           $('#rep-name').empty();
           $('#descr-district').empty();
           $('#descr-party').empty();
+          $('#rep-pic').empty();
 
           $('#rep-name').append('<p class="rep-name">Robert Pittenger</p>');
           $('#descr-district').append('<p class="descr-district"><span class="subber">District: </span> 9</p>');
           $('#descr-party').append('<p class="republican"><span class="subber">Party: </span>Republican</p>');
+          $('#rep-pic').append('<div class="picwid pittenger-pic"></div>');
 
           chart = new Highcharts.Chart({
             chart: {
@@ -728,10 +733,12 @@
           $('#rep-name').empty();
           $('#descr-district').empty();
           $('#descr-party').empty();
+          $('#rep-pic').empty();
 
           $('#rep-name').append('<p class="rep-name">David Price</p>');
           $('#descr-district').append('<p class="descr-district"><span class="subber">District: </span> 4</p>');
           $('#descr-party').append('<p class="democrat"><span class="subber">Party: </span>Democrat</p>');
+          $('#rep-pic').append('<div class="picwid price-pic"></div>');
 
           chart = new Highcharts.Chart({
             chart: {
@@ -769,10 +776,12 @@
           $('#rep-name').empty();
           $('#descr-district').empty();
           $('#descr-party').empty();
+          $('#rep-pic').empty();
 
           $('#rep-name').append('<p class="rep-name">David Rouzer</p>');
           $('#descr-district').append('<p class="descr-district"><span class="subber">District: </span> 7</p>');
           $('#descr-party').append('<p class="republican"><span class="subber">Party: </span>Republican</p>');
+          $('#rep-pic').append('<div class="picwid rouzer-pic"></div>');
 
           chart = new Highcharts.Chart({
             chart: {
@@ -806,19 +815,23 @@
         //WALKER
         else if(lastName == 'walker'){
           //console.log("Walker chart");
-          
-          $('#main-graph').hide();
 
-          $('#rep-name').empty();
-          $('#descr-district').empty();
-          $('#descr-party').empty();
+          window.alert("No data available.");
 
-          $('#rep-name').append('<p class="rep-name">Bradley Walker</p>');
-          $('#descr-district').append('<p class="descr-district"><span class="subber">District: </span> 6</p>');
-          $('#descr-party').append('<p class="republican"><span class="subber">Party: </span>Republican</p>');
-          $('#no-data').append('<p>No data available</p>');
-
-          console.log("Orgs after else if walker: " + organizationWalker);
+          // $('#main-graph').hide();
+          //
+          // $('#rep-name').empty();
+          // $('#descr-district').empty();
+          // $('#descr-party').empty();
+          // $('#rep-pic').empty();
+          //
+          // $('#rep-name').append('<p class="rep-name">Bradley Walker</p>');
+          // $('#descr-district').append('<p class="descr-district"><span class="subber">District: </span> 6</p>');
+          // $('#descr-party').append('<p class="republican"><span class="subber">Party: </span>Republican</p>');
+          // $('#rep-pic').append('<div class="picwid walker-pic"></div>');
+          // $('#no-data').append('<h3>No data available</h3>');
+          //
+          // console.log("Orgs after else if walker: " + organizationWalker);
         } //end walker
 
 
